--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
-.App {
+/* @import url('https://fonts.googleapis.com/css2?family=Red+Rose&display=swap');
+.App{
+  font-family: 'Red Rose', cursive;
+}  */
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +43,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
