--- a/src/components/circleLine/Circle.css
+++ b/src/components/circleLine/Circle.css
@@ -8,13 +8,13 @@ body{
     width: var(--circle-size);
     border-radius: 50%;
     overflow: hidden;
-    animation: spin 20s linear reverse;
+    animation: spin 40s linear infinite;
 }
 @keyframes spin{
-    0%{
-        transform: rotate(0);
+    from {
+        transform: rotate(0deg);
     }
-    100%{
+    to {
         transform: rotate(360deg);
     }
 }
